--- a/eventos.html
+++ b/eventos.html
@@ -7,20 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            "dark-950": "#06060a",
-            "dark-900": "#0a0a12",
-            "dark-800": "#111119",
-            "dark-700": "#1a1a26",
-            "dark-600": "#242434",
-            "dark-500": "#2e2e42",
-            emerald: { 50:'#ecfdf5', 100:'#d1fae5', 200:'#a7f3d0', 400:'#34d399', 500:'#10b981', 600:'#059669', 700:'#047857' }
-          },
-          fontFamily: { sans: ["Inter", "system-ui", "sans-serif"] }
-        }
-      }
+      theme: { extend: { colors: { emerald: { 50:'#ecfdf5', 100:'#d1fae5', 200:'#a7f3d0', 400:'#34d399', 500:'#10b981', 600:'#059669', 700:'#047857' } } } }
     }
   </script>
   <script src="https://unpkg.com/lucide@latest"></script>
@@ -56,97 +43,64 @@
 
 
   .clamp2{display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;}
-
-/* ===== Shared dark neon theme (from index) ===== */
-html{scroll-behavior:smooth}
-body{background-color:#06060a;font-family:Inter,system-ui,sans-serif}
-
-/* scrollbar */
-::-webkit-scrollbar{width:6px}
-::-webkit-scrollbar-track{background:#111119}
-::-webkit-scrollbar-thumb{background:rgba(52,211,153,.55);border-radius:3px}
-::-webkit-scrollbar-thumb:hover{background:rgba(52,211,153,.85)}
-
-/* Navbar surface */
-.landing-dark{ background:#06060a; color:#f8fafc; }
-.landing-dark .header-surface{ background:rgba(6,6,10,.72); border-color:rgba(255,255,255,.08); }
-.landing-dark .header-link{ color:rgba(226,232,240,.78); }
-.landing-dark .header-link:hover{ color:#fff; background:rgba(255,255,255,.06); }
-.landing-dark .header-btn{ background:rgba(255,255,255,.06); border-color:rgba(255,255,255,.08); color:#f8fafc; }
-.landing-dark .header-btn:hover{ background:rgba(255,255,255,.10); }
-
-/* dropdown overrides for dark */
-.landing-dark .dd-btn{
-  background: rgba(255,255,255,.06) !important;
-  border:1px solid rgba(255,255,255,.10) !important;
-  color:#e2e8f0 !important;
-}
-.landing-dark .dd-menu{
-  background:#0b1220 !important;
-  color:#e2e8f0 !important;
-  border:1px solid rgba(255,255,255,.10) !important;
-}
-.landing-dark .dd-item:hover{ background: rgba(255,255,255,.06) !important; }
-.landing-dark .dd-item[aria-selected="true"]{ background: rgba(16,185,129,.16) !important; color:#d1fae5 !important; }
-
 </style>
 </head>
-<body class="landing-dark min-h-screen bg-dark-950 text-slate-50">
+<body class="min-h-screen bg-white text-slate-900">
 
   
   <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden bg-black/40"></div>
-  <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-dark-900/70 backdrop-blur border-r border-white/10 transition-transform">
-    <div class="p-4 border-b border-white/10 flex items-center justify-between">
+  <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-white backdrop-blur border-r border-slate-200 transition-transform">
+    <div class="p-4 border-b border-slate-200 flex items-center justify-between">
       <div class="flex items-center gap-2">
         <div class="h-9 w-9 rounded-xl bg-emerald-500/15 ring-1 ring-emerald-400/20 flex items-center justify-center">
-          <i data-lucide="shield" class="h-5 w-5 text-emerald-300"></i>
+          <i data-lucide="shield" class="h-5 w-5 text-emerald-700"></i>
         </div>
         <div class="leading-tight">
-          <div class="text-white font-black">Guilda • HUB</div>
-          <div class="text-xs text-slate-300/70">Eventos • Camps</div>
+          <div class="text-slate-900 font-black">Guilda • HUB</div>
+          <div class="text-xs text-slate-500">Eventos • Camps</div>
         </div>
       </div>
-      <button id="sidebar-close" class="h-10 w-10 grid place-items-center rounded-xl hover:bg-white/10">
-        <i data-lucide="x" class="h-5 w-5 text-slate-200"></i>
+      <button id="sidebar-close" class="h-10 w-10 grid place-items-center rounded-xl hover:bg-slate-100">
+        <i data-lucide="x" class="h-5 w-5 text-slate-700"></i>
       </button>
     </div>
 
     <nav class="p-3 space-y-1">
-      <a href="index.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/10">
+      <a href="index.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
         <i data-lucide="home" class="h-4 w-4"></i>
         <span class="font-semibold">Início</span>
       </a>
-      <a href="eventos.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/10">
+      <a href="eventos.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
         <i data-lucide="calendar" class="h-4 w-4"></i>
         <span class="font-semibold">Eventos e Camp</span>
       </a>
-      <a href="stats.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/10">
+      <a href="stats.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
         <i data-lucide="bar-chart-3" class="h-4 w-4"></i>
         <span class="font-semibold">Minhas estatísticas</span>
       </a>
-      <a href="suporte.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/10">
+      <a href="suporte.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
         <i data-lucide="help-circle" class="h-4 w-4"></i>
         <span class="font-semibold">Suporte</span>
       </a>
     </nav>
 
-    <div class="mt-auto p-4 text-xs text-slate-300/70 border-t border-white/10">
+    <div class="mt-auto p-4 text-xs text-slate-500 border-t border-white/10">
       <div class="leading-relaxed">Dica: você pode navegar sem login para ver eventos e consultar stats públicas.</div>
     </div>
   </aside>
 
-<header class="sticky top-0 z-30 border-b backdrop-blur header-surface">
+<header class="sticky top-0 z-30 bg-white/80 backdrop-blur border-b border-slate-200">
     <div class="mx-auto w-full max-w-6xl px-4 py-3 flex items-center justify-between">
       <div class="flex items-center gap-3">
-        <button id="sidebar-open" class="h-11 w-11 grid place-items-center rounded-2xl ring-1 shadow-sm transition header-btn">
-          <i data-lucide="menu" class="h-5 w-5 text-white"></i>
+        <button id="sidebar-open" class="h-10 w-10 grid place-items-center rounded-xl bg-white ring-1 ring-slate-200 text-slate-900 shadow-sm hover:bg-slate-50">
+          <i data-lucide="menu" class="h-5 w-5 text-slate-900"></i>
         </button>
         <div class="leading-tight">
-          <div class="font-black text-white">Guilda • HUB</div>
-          <div class="text-xs text-slate-300/70">Eventos • Camps</div>
+          <div class="font-black text-slate-900">Guilda • HUB</div>
+          <div class="text-xs text-slate-500">Eventos • Camps</div>
         </div>
       </div>
-      <a href="index.html" class="text-sm font-semibold rounded-xl px-3 py-2 transition header-link">Voltar</a>
+      <a href="index.html" class="text-sm font-semibold text-emerald-700 hover:text-emerald-800">Voltar</a>
     </div>
   </header>
 
@@ -160,19 +114,19 @@ body{background-color:#06060a;font-family:Inter,system-ui,sans-serif}
 <section class="space-y-4">
   <div class="flex flex-col gap-3 sm:flex-row sm:items-end sm:justify-between">
     <div class="flex-1">
-      <label class="text-xs text-slate-300/70">Pesquisar</label>
+      <label class="text-xs text-slate-500">Pesquisar</label>
       <input id="q" type="text" placeholder="Ex: nome da guilda, título, descrição..."
-        class="mt-1 w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3 text-sm outline-none focus:ring-emerald-400/40" />
+        class="mt-1 w-full rounded-2xl bg-white ring-1 ring-slate-200 px-4 py-3 text-sm outline-none focus:ring-emerald-400/40" />
     </div>
     <div class="w-full sm:w-[280px]">
-      <label class="text-xs text-slate-300/70">Filtro</label>
+      <label class="text-xs text-slate-500">Filtro</label>
       <div class="relative mt-1">
         
         <input type="hidden" id="filter" value="all" />
         <div class="dd">
           <button type="button" id="filterBtn" class="dd-btn">
-            <span id="filterLabel" class="font-semibold text-white">Todos</span>
-            <i data-lucide="chevron-down" class="h-4 w-4 text-slate-300/80"></i>
+            <span id="filterLabel" class="font-semibold text-slate-900">Todos</span>
+            <i data-lucide="chevron-down" class="h-4 w-4 text-slate-600"></i>
           </button>
           <div id="filterMenu" class="dd-menu hidden">
             <button type="button" class="dd-item" data-value="all" aria-selected="true"><i data-lucide="layers" class="h-4 w-4"></i>Todos</button>
@@ -191,11 +145,11 @@ body{background-color:#06060a;font-family:Inter,system-ui,sans-serif}
           </div>
         </div>
 
-        <i data-lucide="chevron-down" class="pointer-events-none absolute right-3 top-1/2 -translate-y-1/2 h-4 w-4 text-slate-300/70"></i>
+        <i data-lucide="chevron-down" class="pointer-events-none absolute right-3 top-1/2 -translate-y-1/2 h-4 w-4 text-slate-500"></i>
       </div>
     </div>
   </div>
-  <div id="status" class="text-sm text-slate-300/70"></div>
+  <div id="status" class="text-sm text-slate-500"></div>
   <div id="grid" class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3"></div>
 </section>
 </main>
@@ -368,7 +322,7 @@ function matchQuery(item, q) {
   return hay.includes(q);
 }
 
-function tag(text, cls = "bg-slate-100 text-slate-200 ring-1 ring-white/10") {
+function tag(text, cls = "bg-slate-100 text-slate-700 ring-1 ring-slate-200") {
   return `<span class="inline-flex items-center rounded-full px-2.5 py-1 text-xs font-extrabold ${cls}">${text}</span>`;
 }
 
@@ -376,7 +330,7 @@ function render(items) {
   if (!elGrid) return;
 
   if (!items.length) {
-    elGrid.innerHTML = `<div class="col-span-full rounded-2xl border border-white/10 bg-white p-5 text-slate-300/80">
+    elGrid.innerHTML = `<div class="col-span-full rounded-2xl border border-slate-200 bg-white p-5 text-slate-600">
       Nenhum evento encontrado com esse filtro/pesquisa.
     </div>`;
     return;
@@ -391,15 +345,15 @@ function render(items) {
   };
 
   const iconPill = (ico, text) => `
-    <span class="inline-flex items-center gap-1.5 rounded-full bg-slate-50 px-2.5 py-1 text-xs font-extrabold text-slate-200 ring-1 ring-white/10">
+    <span class="inline-flex items-center gap-1.5 rounded-full bg-slate-50 px-2.5 py-1 text-xs font-extrabold text-slate-700 ring-1 ring-slate-200">
       <i data-lucide="${ico}" class="h-3.5 w-3.5"></i>${text}
     </span>`;
 
   const row = (ico, label, value) => {
     if (!value) return '';
-    return `<div class="flex items-center gap-2 text-xs text-slate-300/80">
-      <i data-lucide="${ico}" class="h-4 w-4 text-slate-300/70"></i>
-      <span class="font-semibold text-slate-200">${label}:</span>
+    return `<div class="flex items-center gap-2 text-xs text-slate-600">
+      <i data-lucide="${ico}" class="h-4 w-4 text-slate-500"></i>
+      <span class="font-semibold text-slate-700">${label}:</span>
       <span class="truncate">${safeStr(value)}</span>
     </div>`;
   };
@@ -432,12 +386,12 @@ function render(items) {
     const thumb = (() => {
       if (b64) {
         const src = b64.startsWith("data:") ? b64 : `data:image/jpeg;base64,${b64}`;
-        return `<img src="${src}" alt="Evento" class="h-14 w-14 rounded-2xl object-cover ring-1 ring-white/10 bg-slate-100" loading="lazy" />`;
+        return `<img src="${src}" alt="Evento" class="h-14 w-14 rounded-2xl object-cover ring-1 ring-slate-200 bg-slate-100" loading="lazy" />`;
       }
       const ico = safeStr(pick(d, ["icon","icone","symbol"], "")).trim();
       const useIco = ico ? ico : (isPaid ? "badge-dollar-sign" : "trophy");
       return `<div class="h-14 w-14 rounded-2xl bg-emerald-600/10 ring-1 ring-emerald-500/20 grid place-items-center">
-        <i data-lucide="${useIco}" class="h-6 w-6 text-emerald-300"></i>
+        <i data-lucide="${useIco}" class="h-6 w-6 text-emerald-700"></i>
       </div>`;
     })();
 
@@ -454,14 +408,14 @@ const topPills = [
   prize ? iconPill("trophy", `Premiação ${prize}`) : ""
 ].filter(Boolean).join("");
 
-    return `<article class="group overflow-hidden rounded-3xl border border-white/10 bg-white shadow-sm transition hover:shadow-md">
+    return `<article class="group overflow-hidden rounded-3xl border border-slate-200 bg-white shadow-sm transition hover:shadow-md">
       <div class="p-5">
         <div class="flex items-start justify-between gap-3">
           <div class="flex items-start gap-3 min-w-0">
             ${thumb}
             <div class="min-w-0">
-              <div class="truncate text-base font-black text-white">${title}</div>
-              <div class="text-xs text-slate-300/70">Por <span class="font-semibold text-slate-200">${guildName}</span></div>
+              <div class="truncate text-base font-black text-slate-900">${title}</div>
+              <div class="text-xs text-slate-500">Por <span class="font-semibold text-slate-700">${guildName}</span></div>
             </div>
           </div>
           ${link ? `<a href="${link}" target="_blank" rel="noopener noreferrer"
@@ -470,7 +424,7 @@ const topPills = [
           </a>` : ``}
         </div>
 
-        ${desc ? `<p class="mt-3 text-sm text-slate-300/80 leading-relaxed clamp2">${desc}</p>` : ``}
+        ${desc ? `<p class="mt-3 text-sm text-slate-600 leading-relaxed clamp2">${desc}</p>` : ``}
 
         <div class="mt-3 flex flex-wrap gap-2 justify-start text-left">
           ${topPills}
@@ -503,7 +457,7 @@ elQ?.addEventListener('input', applyFilters);
 
 async function loadEventsFromGuildas() {
   setStatus("Carregando eventos…");
-  elGrid.innerHTML = `<div class="col-span-full rounded-2xl border border-white/10 bg-white p-5 text-slate-300/80">
+  elGrid.innerHTML = `<div class="col-span-full rounded-2xl border border-slate-200 bg-white p-5 text-slate-600">
     Carregando…
   </div>`;
 
