--- a/suporte.html
+++ b/suporte.html
@@ -7,20 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            "dark-950": "#06060a",
-            "dark-900": "#0a0a12",
-            "dark-800": "#111119",
-            "dark-700": "#1a1a26",
-            "dark-600": "#242434",
-            "dark-500": "#2e2e42",
-            emerald: { 50:'#ecfdf5', 100:'#d1fae5', 200:'#a7f3d0', 400:'#34d399', 500:'#10b981', 600:'#059669', 700:'#047857' }
-          },
-          fontFamily: { sans: ["Inter", "system-ui", "sans-serif"] }
-        }
-      }
+      theme: { extend: { colors: { emerald: { 50:'#ecfdf5', 100:'#d1fae5', 200:'#a7f3d0', 400:'#34d399', 500:'#10b981', 600:'#059669', 700:'#047857' } } } }
     }
   </script>
   <script src="https://unpkg.com/lucide@latest"></script>
@@ -41,144 +28,111 @@
     .drawer-backdrop.show{ opacity:1; pointer-events:auto; }
     .drawer-panel{ transform: translateX(110%); transition: transform .35s cubic-bezier(.2,.9,.2,1); }
     .drawer-panel.show{ transform: translateX(0); }
-  
-/* ===== Shared dark neon theme (from index) ===== */
-html{scroll-behavior:smooth}
-body{background-color:#06060a;font-family:Inter,system-ui,sans-serif}
-
-/* scrollbar */
-::-webkit-scrollbar{width:6px}
-::-webkit-scrollbar-track{background:#111119}
-::-webkit-scrollbar-thumb{background:rgba(52,211,153,.55);border-radius:3px}
-::-webkit-scrollbar-thumb:hover{background:rgba(52,211,153,.85)}
-
-/* Navbar surface */
-.landing-dark{ background:#06060a; color:#f8fafc; }
-.landing-dark .header-surface{ background:rgba(6,6,10,.72); border-color:rgba(255,255,255,.08); }
-.landing-dark .header-link{ color:rgba(226,232,240,.78); }
-.landing-dark .header-link:hover{ color:#fff; background:rgba(255,255,255,.06); }
-.landing-dark .header-btn{ background:rgba(255,255,255,.06); border-color:rgba(255,255,255,.08); color:#f8fafc; }
-.landing-dark .header-btn:hover{ background:rgba(255,255,255,.10); }
-
-/* dropdown overrides for dark */
-.landing-dark .dd-btn{
-  background: rgba(255,255,255,.06) !important;
-  border:1px solid rgba(255,255,255,.10) !important;
-  color:#e2e8f0 !important;
-}
-.landing-dark .dd-menu{
-  background:#0b1220 !important;
-  color:#e2e8f0 !important;
-  border:1px solid rgba(255,255,255,.10) !important;
-}
-.landing-dark .dd-item:hover{ background: rgba(255,255,255,.06) !important; }
-.landing-dark .dd-item[aria-selected="true"]{ background: rgba(16,185,129,.16) !important; color:#d1fae5 !important; }
-
-</style>
+  </style>
 </head>
-<body class="landing-dark min-h-screen bg-dark-950 text-slate-50">
+<body class="min-h-screen bg-white text-slate-900">
 
   
   <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden bg-black/40"></div>
-  <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-dark-900/70 backdrop-blur border-r border-white/10 transition-transform">
-    <div class="p-4 border-b border-white/10 flex items-center justify-between">
+  <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-white backdrop-blur border-r border-slate-200 transition-transform">
+    <div class="p-4 border-b border-slate-200 flex items-center justify-between">
       <div class="flex items-center gap-2">
         <div class="h-9 w-9 rounded-xl bg-emerald-500/15 ring-1 ring-emerald-400/20 flex items-center justify-center">
-          <i data-lucide="shield" class="h-5 w-5 text-emerald-300"></i>
+          <i data-lucide="shield" class="h-5 w-5 text-emerald-700"></i>
         </div>
         <div class="leading-tight">
-          <div class="text-white font-black">Guilda HUB</div>
-          <div class="text-xs text-slate-300/70">Eventos • Camps • Stats</div>
+          <div class="text-slate-900 font-black">Guilda HUB</div>
+          <div class="text-xs text-slate-500">Eventos • Camps • Stats</div>
         </div>
       </div>
-      <button id="sidebar-close" class="h-10 w-10 grid place-items-center rounded-xl hover:bg-white/10">
-        <i data-lucide="x" class="h-5 w-5 text-slate-200"></i>
+      <button id="sidebar-close" class="h-10 w-10 grid place-items-center rounded-xl hover:bg-slate-100">
+        <i data-lucide="x" class="h-5 w-5 text-slate-700"></i>
       </button>
     </div>
 
     <nav class="p-3 space-y-1">
-      <a href="index.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/10">
+      <a href="index.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
         <i data-lucide="home" class="h-4 w-4"></i>
         <span class="font-semibold">Início</span>
       </a>
-      <a href="eventos.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/10">
+      <a href="eventos.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
         <i data-lucide="calendar" class="h-4 w-4"></i>
         <span class="font-semibold">Eventos e Camp</span>
       </a>
-      <a href="stats.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/10">
+      <a href="stats.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
         <i data-lucide="bar-chart-3" class="h-4 w-4"></i>
         <span class="font-semibold">Minhas estatísticas</span>
       </a>
-      <a href="suporte.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-200 hover:bg-white/10">
+      <a href="suporte.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
         <i data-lucide="help-circle" class="h-4 w-4"></i>
         <span class="font-semibold">Suporte</span>
       </a>
     </nav>
 
-    <div class="mt-auto p-4 text-xs text-slate-300/70 border-t border-white/10">
+    <div class="mt-auto p-4 text-xs text-slate-500 border-t border-white/10">
       <div class="leading-relaxed">Dica: você pode navegar sem login para ver eventos e consultar stats públicas.</div>
     </div>
   </aside>
 
-<header class="sticky top-0 z-30 border-b backdrop-blur header-surface">
+<header class="sticky top-0 z-30 bg-white/80 backdrop-blur border-b border-slate-200">
     <div class="mx-auto w-full max-w-6xl px-4 py-3 flex items-center justify-between">
       <div class="flex items-center gap-3">
-        <button id="sidebar-open" class="h-11 w-11 grid place-items-center rounded-2xl ring-1 shadow-sm transition header-btn">
+        <button id="sidebar-open" class="h-10 w-10 grid place-items-center rounded-xl bg-white ring-1 ring-slate-200 text-slate-900 shadow-sm hover:bg-slate-50">
           <i data-lucide="menu" class="h-5 w-5"></i>
         </button>
         <div class="leading-tight">
-          <div class="font-black text-white">Guilda HUB</div>
-          <div class="text-xs text-slate-300/70">Eventos • Camps • Stats</div>
+          <div class="font-black text-slate-900">Guilda HUB</div>
+          <div class="text-xs text-slate-500">Eventos • Camps • Stats</div>
         </div>
       </div>
-      <a href="index.html" class="text-sm font-semibold rounded-xl px-3 py-2 transition header-link">Voltar</a>
+      <a href="index.html" class="text-sm font-semibold text-emerald-700 hover:text-emerald-800">Voltar</a>
     </div>
   </header><main class="mx-auto w-full max-w-6xl px-4 py-6">
 <section class="space-y-4">
-  <article class="rounded-3xl border border-white/10 bg-white/5 p-5">
+  <article class="rounded-3xl bg-white ring-1 ring-slate-200 p-5">
     <div class="flex items-start justify-between gap-3">
       <div>
         <h2 class="text-lg font-black">Suporte</h2>
-        <p class="mt-2 text-sm text-slate-200/90">
+        <p class="mt-2 text-sm text-slate-700/90">
           Se você travou em alguma tela, não achou sua guilda, não aparece evento, ou quer sugerir melhoria,
           chama a gente. O objetivo do Guilda HUB é deixar tudo mais simples e organizado.
         </p>
-        <p class="mt-2 text-sm text-slate-200/90">
+        <p class="mt-2 text-sm text-slate-700/90">
           Para resolver rápido: manda print + o que você clicou antes do erro. Isso ajuda demais.
         </p>
       </div>
-      <i data-lucide="life-buoy" class="h-7 w-7 text-emerald-300"></i>
+      <i data-lucide="life-buoy" class="h-7 w-7 text-emerald-700"></i>
     </div>
 
     <div class="mt-5 grid grid-cols-1 gap-3 sm:grid-cols-2">
       <a href="https://instagram.com/guildahub" target="_blank" rel="noopener noreferrer"
-        class="rounded-2xl border border-white/10 bg-white/5 p-4 hover:bg-white/10 transition">
+        class="rounded-2xl bg-white ring-1 ring-slate-200 p-4 hover:bg-white/10 transition">
         <div class="flex items-center gap-3">
           <div class="h-10 w-10 rounded-2xl bg-pink-500/15 ring-1 ring-pink-400/20 flex items-center justify-center">
             <i data-lucide="instagram" class="h-5 w-5 text-pink-200"></i>
           </div>
           <div>
             <div class="text-sm font-black">Instagram</div>
-            <div class="text-xs text-slate-300/70">@guildahub</div>
+            <div class="text-xs text-slate-500">@guildahub</div>
           </div>
         </div>
       </a>
 
       <a href="https://chat.whatsapp.com/FsBRk3VNaGm29UmXldwaOE?mode=gi_t" target="_blank" rel="noopener noreferrer"
-        class="rounded-2xl border border-white/10 bg-white/5 p-4 hover:bg-white/10 transition">
+        class="rounded-2xl bg-white ring-1 ring-slate-200 p-4 hover:bg-white/10 transition">
         <div class="flex items-center gap-3">
           <div class="h-10 w-10 rounded-2xl bg-emerald-500/15 ring-1 ring-emerald-400/20 flex items-center justify-center">
             <i data-lucide="message-circle" class="h-5 w-5 text-emerald-200"></i>
           </div>
           <div>
             <div class="text-sm font-black">Grupo WhatsApp</div>
-            <div class="text-xs text-slate-300/70">Suporte oficial</div>
+            <div class="text-xs text-slate-500">Suporte oficial</div>
           </div>
         </div>
       </a>
     </div>
 
-    <p class="mt-5 text-xs text-slate-300/70">
+    <p class="mt-5 text-xs text-slate-500">
       Atendimento depende da fila do dia. Quanto mais claro você for, mais rápido a gente resolve.
     </p>
   </article>
