--- a/chefe.html
+++ b/chefe.html
@@ -559,7 +559,7 @@ function fmtDate(ts) {
              <p><b>Data:</b> ${fmtDate(s.createdAt)}</p>
           </div>
           <div class="flex gap-2">
-             <button onclick="window.approveSolicita('${s.id}', '${s.uid}', '${s.plano}')" 
+             <button onclick="window.approveSolicita('${s.id}', '${s.plano}')" 
                      class="flex-1 py-2 bg-emerald-600 text-white rounded-xl text-[10px] font-bold hover:bg-emerald-700 transition">APROVAR</button>
              <button onclick="window.rejectSolicita('${s.id}')" 
                      class="px-3 py-2 bg-gray-200 text-gray-600 rounded-xl text-[10px] font-bold hover:bg-gray-300 transition">REJEITAR</button>
@@ -572,8 +572,9 @@ function fmtDate(ts) {
     }
 
     
-    window.approveSolicita = async (sid, uid, plano) => {
+    window.approveSolicita = async (sid, plano) => {
       try {
+        const uid = sid; // agora o docId da solicitação é o UID
         const uSnap = await getDoc(doc(db, 'users', uid));
         if (!uSnap.exists()) throw new Error("Usuário não encontrado.");
 
@@ -581,31 +582,39 @@ function fmtDate(ts) {
         if (!gid) throw new Error("Guilda não localizada.");
 
         const normalizedPlano = normalizeVip(plano);
+        const expiresAtMs = buildVipExpiresAt(normalizedPlano);
 
         // salva em configGuilda (cria se não existir)
         await setDoc(doc(db, 'configGuilda', gid), {
           vipTier: normalizedPlano,
-          vipExpiresAt: buildVipExpiresAt(normalizedPlano)
+          vipExpiresAt: expiresAtMs,
+          updatedAt: serverTimestamp(),
+          updatedAtMs: Date.now()
         }, { merge: true });
 
-        // mantém vipTier sincronizado em guildas
+        // mantém VIP sincronizado em guildas também
         await setDoc(doc(db, 'guildas', gid), {
-          vipTier: normalizedPlano
+          vipTier: normalizedPlano,
+          vipExpiresAt: expiresAtMs,
+          updatedAt: serverTimestamp(),
+          updatedAtMs: Date.now()
         }, { merge: true });
 
         // marca solicitação como aprovada
         await updateDoc(doc(db, 'solicita', sid), {
           status: 'aprovado',
-          updatedAt: serverTimestamp()
+          approvedVipTier: normalizedPlano,
+          vipExpiresAt: expiresAtMs,
+          updatedAt: serverTimestamp(),
+          updatedAtMs: Date.now()
         });
 
         showToast('success', 'Upgrade aprovado e ativo para a guilda!');
         loadSolicita();
         loadData();
-
       } catch (e) {
         console.error(e);
-        showToast('error', 'Erro ao aprovar: ' + e.message);
+        showToast('error', 'Erro ao aprovar: ' + (e?.message || e));
       }
     };
 
